syntax = "proto3";

package de.mickare.xserver.protocol;

import "Network.proto";

message AuthChallenge {
	bytes token = 1;
	Server master = 2;
	reserved 3 to 20;
}

message AuthResponse {
	bytes token = 1;
	Server slave = 2;
	reserved 3 to 20;
}

message AuthSuccess {
	oneof action {
		bool upgrade = 1;
		NetworkInformation connectOther = 2;		
	}
	reserved 3 to 20;
}

